Travis CI: Do not make static+shared build with mingw32 on Ubuntu
Mingw32 (gcc-mingw-w64) on Ubuntu Jammy has a multiple-definition
issue with linking shared libraries if the exported symbols are
not attributed with dllexport.

--- a/.travis.yml
+++ b/.travis.yml
@@ -725,7 +725,7 @@ jobs:
     language: c
     env:
     - CXX=x86_64-w64-mingw32-g++
-    - CONF_OPTIONS="--host=x86_64-w64-mingw32 --enable-cplusplus --enable-static"
+    - CONF_OPTIONS="--host=x86_64-w64-mingw32 --enable-cplusplus --disable-shared"
     - MAKEFILE_TARGETS="all"
   - addons:
       apt:
